// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCard renders default 1`] = `
<DocumentFragment>
  <div
    class="css-znlwku"
    data-cy="linkCard"
  >
    <div
      class="css-ysit7j"
    >
      <a
        class="css-gsqxnx"
        href="http://google.com"
      >
        <span
          class="css-1uecx0y"
          data-cy="box"
        >
          Google
        </span>
      </a>
      Example Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCard renders with external link 1`] = `
<DocumentFragment>
  <div
    class="css-znlwku"
    data-cy="linkCard"
  >
    <div
      class="css-ysit7j"
    >
      <a
        class="css-gsqxnx"
        href="http://google.com"
        rel="noopener"
        target="_blank"
      >
        <span
          class="css-1uecx0y"
          data-cy="box"
        >
          Google
        </span>
      </a>
      Example Content
    </div>
  </div>
</DocumentFragment>
`;
